<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/movieCoverImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/movie_cover"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/movie_cover"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/artistRoundedImageView"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/movieInfoCardScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/navView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movieInfoCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="224dp"
            android:background="@drawable/movie_info_card_background">

            <TextView
                android:id="@+id/movieCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_category"
                android:textColor="@color/black"
                android:background="@drawable/movie_category_frame"
                app:layout_constraintTop_toTopOf="@id/movieInfoCard"
                app:layout_constraintLeft_toLeftOf="@id/movieInfoCard"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:paddingLeft="9dp"
                android:paddingRight="9dp"
                android:paddingTop="4dp"
                android:paddingBottom="3dp"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/movieDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_date"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@id/movieCategory"
                app:layout_constraintTop_toTopOf="@id/movieInfoCard"
                android:layout_marginTop="32dp"
                android:layout_marginStart="14dp"
                android:paddingTop="4dp"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieCategory"
                android:text="@string/movie_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="22dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/age_rating"
                android:layout_marginEnd="20.3dp"
                android:layout_marginTop="41.4dp"
                android:background="@drawable/ic_rating_frame"
                android:padding="10dp"/>

            <ImageView
                android:id="@+id/star1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_star_black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieTitle"
                android:layout_marginTop="8dp"
                android:layout_marginStart="22dp"
                android:contentDescription="@string/star"/>

            <ImageView
                android:id="@+id/star2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_star_black"
                app:layout_constraintLeft_toRightOf="@id/star1"
                app:layout_constraintTop_toBottomOf="@id/movieTitle"
                android:layout_marginTop="8dp"
                android:layout_marginStart="1.87dp"
                android:contentDescription="@string/star"/>

            <ImageView
                android:id="@+id/star3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_star_black"
                app:layout_constraintLeft_toRightOf="@id/star2"
                app:layout_constraintTop_toBottomOf="@id/movieTitle"
                android:layout_marginTop="8dp"
                android:layout_marginStart="1.87dp"
                android:contentDescription="@string/star"/>

            <ImageView
                android:id="@+id/star4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_star_black"
                app:layout_constraintLeft_toRightOf="@id/star3"
                app:layout_constraintTop_toBottomOf="@id/movieTitle"
                android:layout_marginTop="8dp"
                android:layout_marginStart="1.87dp"
                android:contentDescription="@string/star"/>

            <ImageView
                android:id="@+id/star5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_star_transparent"
                app:layout_constraintLeft_toRightOf="@id/star4"
                app:layout_constraintTop_toBottomOf="@id/movieTitle"
                android:layout_marginTop="8dp"
                android:layout_marginStart="1.87dp"
                android:contentDescription="@string/star"/>

            <TextView
                android:id="@+id/movieDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_description"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/star1"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/artistsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artists_title"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/movieDescription"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="35dp"
                android:layout_marginStart="22dp"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/artistsTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="46dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/firstArtist"
                        android:layout_width="150dp"
                        android:layout_height="196dp"
                        app:srcCompat="@drawable/artist_1"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="16dp"
                        app:shapeAppearanceOverlay="@style/artistRoundedImageView"
                        android:scaleType="centerCrop"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/secondArtist"
                        android:layout_width="150dp"
                        android:layout_height="196dp"
                        app:srcCompat="@drawable/artist_2"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="16dp"
                        app:shapeAppearanceOverlay="@style/artistRoundedImageView"
                        android:scaleType="centerCrop"
                        app:layout_constraintLeft_toRightOf="@id/firstArtist"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/thirdArtist"
                        android:layout_width="150dp"
                        android:layout_height="196dp"
                        app:srcCompat="@drawable/artist_3"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="16dp"
                        app:shapeAppearanceOverlay="@style/artistRoundedImageView"
                        android:scaleType="centerCrop"
                        app:layout_constraintLeft_toRightOf="@id/secondArtist"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/firstArtistName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/artist_1_name"
                        app:layout_constraintTop_toBottomOf="@id/firstArtist"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:id="@+id/secondArtistName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/artist_2_name"
                        app:layout_constraintTop_toBottomOf="@id/secondArtist"
                        app:layout_constraintLeft_toRightOf="@id/firstArtist"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:id="@+id/thirdArtistName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/artist_3_name"
                        app:layout_constraintTop_toBottomOf="@id/thirdArtist"
                        app:layout_constraintLeft_toRightOf="@id/secondArtist"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="20dp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </HorizontalScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu"/>
</androidx.constraintlayout.widget.ConstraintLayout>